--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,8 +9,8 @@
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
       crossorigin="anonymous"></script>
       <script src="https://sdk.amazonaws.com/js/aws-sdk-2.142.0.min.js"></script>
-      <script src="js/jquery.playSound.js"></script>
-      <script src="node_modules/blueimp-md5/js/md5.min.js"></script>
+      <script src="./js/jquery.playSound.js"></script>
+      <script src="./node_modules/blueimp-md5/js/md5.min.js"></script>
 
 
   </head>
