--- a/views/index.hbs
+++ b/views/index.hbs
@@ -179,6 +179,6 @@ function check_yoda(hash) {
 }
 
 $('#wise_master').click(function(){
-  $.playSound('./sounds/laugh.wav');
+  $.playSound('./sounds/laugh.WAV');
 });
 </script>
