--- a/public/css/main.less
+++ b/public/css/main.less
@@ -140,7 +140,7 @@ html {
     0%  {background-image: url('/img/yoda8.png');}
    20%  {background-image: url('/img/yoda2.png');}
    40%  {background-image: url('/img/yoda5.png');}
-   60%  {background-image: url('/img/yoda1.jpg');}
+   60%  {background-image: url('/img/Yoda1.jpg');}
    80%  {background-image: url('/img/yoda2.png');}
    100%  {background-image: url('/img/yoda3.png');}
 
@@ -159,7 +159,7 @@ html {
     0%  {background-image: url('/img/yoda8.png');}
    20%  {background-image: url('/img/yoda2.png');}
    40%  {background-image: url('/img/yoda5.png');}
-   60%  {background-image: url('/img/yoda1.jpg');}
+   60%  {background-image: url('/img/Yoda1.jpg');}
    80%  {background-image: url('/img/yoda2.png');}
    100%  {background-image: url('/img/yoda3.png');}
 
