--- a/public/css/main.css
+++ b/public/css/main.css
@@ -145,7 +145,7 @@ html {
     background-image: url('/img/yoda5.png');
   }
   60% {
-    background-image: url('/img/Yoda1.jpg');
+    background-image: url('/img/Yoda1.png');
   }
   80% {
     background-image: url('/img/yoda2.png');
@@ -177,7 +177,7 @@ html {
     background-image: url('/img/yoda5.png');
   }
   60% {
-    background-image: url('/img/Yoda1.jpg');
+    background-image: url('/img/Yoda1.png');
   }
   80% {
     background-image: url('/img/yoda2.png');
